@@ -158,9 +158,6 @@ Use of optimized-pegasos for pro.
 revise static create interface:
   currently, we return reference, but it is safer to return pointer...?
 
-
 small-vector reimplement:
   we will occupy two-pointers (at least 16-byte) and use only 32-bit (= 4 byte) size indicator, so that we can use 12-byte for storage...
 
-
-Entropy-target regularization by { H(x) - \delta }^2
